<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".Complex.ComplexActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtCmplxTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/complex_numbers"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cmplxNumberSolView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/complex_number"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="@+id/txtCmplxTitle"
            app:layout_constraintStart_toStartOf="@+id/txtCmplxTitle"
            app:layout_constraintTop_toBottomOf="@+id/txtCmplxTitle" />

        <TextView
            android:id="@+id/polarSolView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/polar_form"
            android:textSize="16sp"
            android:textStyle="italic|bold"
            app:layout_constraintEnd_toEndOf="@+id/cmplxNumberSolView"
            app:layout_constraintStart_toStartOf="@+id/cmplxNumberSolView"
            app:layout_constraintTop_toBottomOf="@+id/cmplxNumberSolView" />

        <TextView
            android:id="@+id/eulerSolView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/euler_s_form"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="@+id/polarSolView"
            app:layout_constraintStart_toStartOf="@+id/polarSolView"
            app:layout_constraintTop_toBottomOf="@+id/polarSolView" />

        <TextView
            android:id="@+id/conjugateCmplxSolView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/conjugate"
            android:textSize="16sp"
            android:textStyle="italic|bold"
            app:layout_constraintEnd_toEndOf="@+id/eulerSolView"
            app:layout_constraintStart_toStartOf="@+id/eulerSolView"
            app:layout_constraintTop_toBottomOf="@+id/eulerSolView" />

        <TextView
            android:id="@+id/modCmplxSolView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/modulus"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="@+id/conjugateCmplxSolView"
            app:layout_constraintStart_toStartOf="@+id/conjugateCmplxSolView"
            app:layout_constraintTop_toBottomOf="@+id/conjugateCmplxSolView" />

        <TextView
            android:id="@+id/argCmplxSolView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/argument"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="@+id/modCmplxSolView"
            app:layout_constraintStart_toStartOf="@+id/modCmplxSolView"
            app:layout_constraintTop_toBottomOf="@+id/modCmplxSolView" />

        <EditText
            android:id="@+id/cmplxRealPartET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/real_part"
            android:importantForAutofill="no"
            android:inputType="numberDecimal|numberSigned"
            android:minHeight="48dp"
            app:layout_constraintEnd_toStartOf="@+id/cmplxUnrealPartET"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/argCmplxSolView" />

        <EditText
            android:id="@+id/cmplxUnrealPartET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:importantForAutofill="no"
            android:inputType="numberSigned|numberDecimal"
            android:minHeight="48dp"
            android:hint="@string/unreal_part"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cmplxRealPartET"
            app:layout_constraintTop_toBottomOf="@+id/argCmplxSolView" />

        <Button
            android:id="@+id/cmplxSolveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/solve"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/argCmplxSolView" />

        <Button
            android:id="@+id/cmplxBackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cmplxSolveBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>