<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".Degree2.Degree2EquationActivity">

    <TextView
        android:id="@+id/txtEquation2Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/ax_bx_c_0"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/degree2EquationSolution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/ax_bx_c_0"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/txtEquation2Title"
        app:layout_constraintStart_toStartOf="@+id/txtEquation2Title"
        app:layout_constraintTop_toBottomOf="@+id/txtEquation2Title" />

    <RadioGroup
        android:id="@+id/degree2RG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/degree2EquationSolution">

        <RadioButton
            android:id="@+id/degree2RealRootsRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:checked="true"
            android:text="@string/real_roots" />

        <RadioButton
            android:id="@+id/degree2UnrealRootsRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:checked="false"
            android:text="@string/unreal_roots" />

    </RadioGroup>

    <EditText
        android:id="@+id/degree2RealRoot1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/_1st_root"
        android:importantForAutofill="no"
        android:inputType="numberDecimal|numberSigned"
        android:minHeight="48dp"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/degree2RealRoot2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/degree2RG" />

    <EditText
        android:id="@+id/degree2RealRoot2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/_2nd_root"
        android:importantForAutofill="no"
        android:inputType="numberSigned|numberDecimal"
        android:minHeight="48dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/degree2RealRoot1"
        app:layout_constraintTop_toBottomOf="@+id/degree2RG" />

    <EditText
        android:id="@+id/degree2UnrealRootReal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/real_part"
        android:importantForAutofill="no"
        android:inputType="numberDecimal|numberSigned"
        android:minHeight="48dp"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/degree2UnrealRootImage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/degree2RG" />

    <EditText
        android:id="@+id/degree2UnrealRootImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/unreal_part"
        android:importantForAutofill="no"
        android:inputType="numberSigned|numberDecimal"
        android:minHeight="48dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/degree2UnrealRootReal"
        app:layout_constraintTop_toBottomOf="@+id/degree2RG" />

    <Button
        android:id="@+id/degree2EquationSolveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/solve"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/degree2RG" />

    <Button
        android:id="@+id/degree2EquationBackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="@+id/degree2EquationSolveBtn"
        app:layout_constraintStart_toStartOf="@+id/degree2EquationSolveBtn"
        app:layout_constraintTop_toBottomOf="@+id/degree2EquationSolveBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>